[gd_scene load_steps=2 format=3 uid="uid://b6x8qy2k3lpvm"]

[ext_resource type="Script" path="res://ui/action_buttons/action_buttons.gd" id="1"]

[node name="ActionButtons" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="RerollButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Reroll (2)"

[node name="ReplaceButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Replace"

[node name="EndTurnButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "End Turn"
